--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,8 @@ node_modules/
 
 # Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
+!.env.example
 
 # Logs
 logs
