--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "vite": "^6.2.3"
   },
   "devDependencies": {
+    "@types/node": "^22.13.13",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0"
