--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@apollo/client": "^3.13.5",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "graphql": "^16.10.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
