--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "graphql": "^16.10.0",
+    "graphql-ws": "^6.0.4",
     "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
