--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,25 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "@graphql-tools/schema": "^10.0.23",
+    "@repeaterjs/repeater": "^3.0.6",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^3.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.14.3",
     "moment": "^2.30.1",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/node": "^20.11.25",
+    "@types/ws": "^8.18.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   }
