--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@apollo/server": "^4.10.1",
     "@graphql-tools/schema": "^10.0.23",
     "@repeaterjs/repeater": "^3.0.6",
+    "@types/lodash": "^4.17.16",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -25,6 +26,7 @@
     "graphql-subscriptions": "^3.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.14.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "ws": "^8.18.1"
