--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/lodash": "^4.17.16",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "cron": "^4.1.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "graphql": "^16.8.1",
