--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@apollo/client": "^3.13.5",
+    "@primer/octicons-react": "^19.15.2",
     "@tailwindcss/forms": "^0.5.10",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.12",
@@ -28,6 +29,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.3"
