Update README to include Authentication details

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ GITHUB_ENTERPRISE_NAME=your-enterprise-slug
 # Server Configuration
 PORT=4000
 MONGO_URI=mongodb://mongo:27017/github-migrations
+
+# Admin Authentication
+MARS_ADMIN=admin
+MARS_PASSWORD=secure123
