--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-# GitHub Configuration
-GITHUB_TOKEN=your-github-token-here
-GITHUB_ENTERPRISE_NAME=your-enterprise-slug
-
 # Server Configuration
 PORT=4000
 MONGO_URI=mongodb://mongo:27017/github-migrations
+NODE_ENV=development
+
+# GitHub Configuration (used by server for API calls)
+GITHUB_TOKEN=your-github-token-here
+GITHUB_ENTERPRISE_NAME=your-enterprise-slug
 
 # Admin Authentication
 MARS_ADMIN=admin
