fix: GitHub token validation and Reports page data loading
- Improved GitHub token handling in resolvers and routes
- Added validation to prevent empty token requests
- Fixed enterprise name loading in Reports page
- Enhanced token validation script with better error messages
- Updated documentation with authentication troubleshooting guide

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
 # Server Configuration
-PORT=4000
-MONGO_URI=mongodb://mongo:27017/github-migrations
-NODE_ENV=development
+PORT=4000                               # Port for backend server
+MONGO_URI=mongodb://mongodb:27017/github-migrations  # MongoDB connection URI (using service name with Docker)
+NODE_ENV=development                    # Environment: development or production
 
 # GitHub Configuration (used by server for API calls)
-GITHUB_TOKEN=your-github-token-here
-GITHUB_ENTERPRISE_NAME=your-enterprise-slug
+GITHUB_TOKEN=your-github-token-here     # Personal Access Token with repo, read:org, read:enterprise scopes
+GITHUB_ENTERPRISE_NAME=your-enterprise-slug  # Your GitHub Enterprise name/slug
 
-# Admin Authentication
-MARS_ADMIN=admin
-MARS_PASSWORD=secure123
+# Admin Authentication (IMPORTANT: change these in production!)
+MARS_ADMIN=admin                        # Username for Settings page access
+MARS_PASSWORD=secure123                 # Password for Settings page access
+
+# Optional Configuration
+# LOG_LEVEL=info                        # Logging level (debug, info, warn, error)
+# SESSION_SECRET=random_string          # Secret for session cookies (recommended for production)
+# SESSION_EXPIRY=3600000                # Session expiry time in milliseconds (default: 1 hour)
