--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,9 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Install bash and curl for the validation script
+RUN apk add --no-cache bash curl
+
 # Copy package files
 COPY package*.json ./
 
@@ -12,6 +15,9 @@ RUN rm -rf node_modules && \
 # Copy the rest of the application code
 COPY . .
 
+# Make the validation script executable
+RUN chmod +x ./scripts/check-github-config.sh
+
 # Build TypeScript code
 RUN npm run build
 
@@ -19,4 +25,4 @@ RUN npm run build
 EXPOSE 4000
 
 # Command to run the application
-CMD ["npm", "start"]
+CMD ["sh", "-c", "./scripts/check-github-config.sh && npm start"]
