--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - PORT=4000
       - GITHUB_TOKEN=${GITHUB_TOKEN}
       - GITHUB_ENTERPRISE_NAME=${GITHUB_ENTERPRISE_NAME}
+      - MARS_ADMIN=${MARS_ADMIN}
+      - MARS_PASSWORD=${MARS_PASSWORD}
     depends_on:
       - mongo
     volumes:
@@ -57,9 +59,8 @@ services:
       - "3001:3000"
     environment:
       - NODE_ENV=development
-      - VITE_GITHUB_TOKEN=${GITHUB_TOKEN}
       - VITE_GITHUB_ENTERPRISE_NAME=${GITHUB_ENTERPRISE_NAME}
-      - VITE_MARS_ADMIN=${MARS_ADMIN}
+      - VITE_GITHUB_TOKEN=${GITHUB_TOKEN}
     depends_on:
       - server
     volumes:
